--- a/stress/Dockerfile
+++ b/stress/Dockerfile
@@ -1,3 +1,3 @@
-FROM rhscl/httpd-24-rhel7
+FROM httpd-24-rhel7
 
 CMD ab -dSrk -c 20 -n 50000000 http://${SCALE_SERVICE_HOST}:${SCALE_SERVICE_PORT}/index.php
