--- a/stress/Dockerfile
+++ b/stress/Dockerfile
@@ -1,3 +1,3 @@
-FROM httpd
+FROM registry.hub.docker.com/library/httpd
 
 CMD ab -dSrk -c 20 -n 50000000 http://${SCALE_SERVICE_HOST}:${SCALE_SERVICE_PORT}/index.php
